app/assets/stylesheets/bootstrap_and_overrides.css.scss
// Copyright © Mapotempo, 2013-2014
//
// This file is part of Mapotempo.
//
// Mapotempo is free software. You can redistribute it and/or
// modify since you respect the terms of the GNU Affero General
// Public License as published by the Free Software Foundation,
// either version 3 of the License, or (at your option) any later version.
//
// Mapotempo is distributed in the hope that it will be useful, but WITHOUT
// ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
// or FITNESS FOR A PARTICULAR PURPOSE.  See the Licenses for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Mapotempo. If not, see:
// <http://www.gnu.org/licenses/agpl.html>
//
/*
  Use Font Awesome icons (default)
  To use Glyphicons instead of Font Awesome, replace with "require twitter-bootstrap-static/bootstrap-glyphicons"
  */

@import "variables";

/* FIX */

.container:after {
    clear: inherit;
}

// Specific for chrome 45 user_agent
// var() -> chrome 49
// font-weight: <number> -> chrome 62
.fa {
  font-family: "Font Awesome 6 Free";
  font-weight: bold;
}

/* Change */

.no-gutter [class*="col-"]:not(:last-child) {
    padding-right:0;
}

$navbar-height: 50px;

.navbar {
  box-shadow: $box-shadow;
  -moz-box-shadow: $box-shadow;
  -webkit-box-shadow: $box-shadow;
  -o-box-shadow: $box-shadow;
  margin-bottom: 10px;
}

h1 {
  margin: 15px 0;
  padding: 5px 0;
  border-bottom: 1px solid #e5e5e5;
}

.form-control.input-sm {
    height: 25px;
    padding: 3px 5px;
}

.row {
  padding-left: unset;
  padding-right: unset;

  margin-left: unset;
  margin-right: unset;
}

.row.form-group {
  .form-inline {
    // several values on same line, like radio buttons
    label {
      margin-left: 10px;
    }
    label:nth-of-type(1) {
      margin-left: 0px;
    }
  }

  input[type="radio"], input[type="checkbox"] {
    margin-top: 10px;
    margin-right: 3px;
  }
}

.input-group-btn .btn-default {
  color: $primary-color;
}

.input-group-addon.input-sm, .input-group-sm .input-group-btn .btn {
    height: 25px;
    padding: 3px 5px;
    margin-right: -1px;
}

button {
  outline: none !important;
}
@media screen and (max-width: 767px) {
  .btn {
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 100%;
  }
}

a.btn-default {
  color: $text-black;
}

.dropdown-menu {
  max-height: 350px;
  overflow-y: auto;
}
.navbar .dropdown-menu {
  max-height: 400px;
}
.navbar .dropdown-toggle span.menu_label {
  max-width: 15em;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: inline-block;
  vertical-align: bottom;
}

.leaflet-top, .leaflet-bottom {
    z-index: 900 !important; /* Bootstrap also use 1000 for control */
}

.leaflet-editing-icon {
  border-radius: 10px;
  border: 3px dimgrey solid;
  opacity: unset;
}

.leaflet-draw-tooltip {
  display: none;
}

hr {
  margin-bottom: 6px;
  margin-top: 6px;
}

/* Bootstrap */
input.form-control[required]:not(:disabled),
select.form-control[required]:not(:disabled) {
  background: #EEFAFF;
}

label .popover {
  font-weight: normal;
}

/** External look-like **/

/* Select2 */
.select2-selection--multiple:before {
  content: "▾ ";
  position: relative;
  float: right;
  height: 0;
  right: 5px;
  top: 5px;
}
.select2 .select2-selection--multiple .select2-selection__rendered {
  padding-right: 10px;
}
.fake .select2-selection:focus {
  border: 1px solid #5897fb;
  box-shadow: 0 0 5px rgba(0,0,0,0.3);
  outline:medium none;
}
.select2-container--bootstrap .select2-selection--multiple .select2-search--inline .select2-search__field  {
  min-width: 0em;
}
.select2 img {
  vertical-align: baseline; /* better for tags */
}

/* Bootstrap-select */
.bootstrap-select {
  button {
    color: #555 !important;
  }
  .caret {
    border-left-width: 4px !important; // conflict with ".input-group :first-child" and gem version 1.12.1
  }
}

/* Move padding in a for easier click area */
.accordion > .panel-heading {
  padding: 0px;

  a {
    display: block;
    padding: 10px 15px;
  }
}
/* Add Open and Close cheron to accordion */
.panel-heading .accordion-toggle:after {
    font: var(--fa-font-solid);
    content: "\f077";
    float: right;
    color: black;
}
.panel-heading .accordion-toggle.collapsed:after {
    font: var(--fa-font-solid);
    content: "\f078";
}

/* Table sorter */
.tablesorter-bootstrap {
  .tablesorter-header {
    text-align: center;

    .btn-group {
      text-align: left;
    }
  }
  .tablesorter-header-inner {
    padding: 0px 12px 0px 0px;

    .tablesorter-icon {
      display: none !important;
    }
  }

  .tablesorter-header .tablesorter-header-inner:after {
    font: var(--fa-font-solid);
    float: right;
    content: "\f0dc";
  }

  .tablesorter-header.sorter-false .tablesorter-header-inner:after {
    display: none;
  }

  .tablesorter-headerAsc .tablesorter-header-inner:after {
    content: "\f0de";
  }

  .tablesorter-headerDesc .tablesorter-header-inner:after {
    content: "\f0dd";
  }
}

/* Leaflet geocoder */
.leaflet-control-geocoder-expanded input, .leaflet-control-geocoder-error {
  width: 350px;
}

ul.leaflet-control-geocoder-alternatives {
  width: inherit;
}

/* Leaflet draw */
.leaflet-draw-actions {
  a {
    background-color: #3071A9;
    border-color: #285E8E;
    color: #FFF;
  }

  a:hover {
    background-color: #3071A9;
    text-decoration: none;
    color: #FFF;
  }

  li a {
    color: #FFF;
  }
}

/* jquery-simplecolorpicker */
span.color[data-color] {
  line-height: 1.3;
  border: 1px solid lightgray;
  width: 19px;
  height: 19px;
  border-radius: 50%;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  -o-border-radius: 50%;
}

/* tubolinks */
html.turbolinks-progress-bar::before {
  background-color: #13B0CA !important;
}

/* leaflet-marker-icon */
.leaflet-marker-icon {
  font-size: 16px;
}
/* ... */

